# downtube

./: .gitignore  Dockerfile  downtube.py  poe.toml  pyproject.toml  requirements.txt  www.youtube.com_cookies.txt
.ebextensions/: 01-launch-template.config  01-launch-template.config.template  01-root-volume-config.config  dev.config  launch-template.config  options.config  vpc.config
api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  downtube.py  poe.toml  pyproject.toml  www.youtube.com_cookies.txt
api/.ebextensions/: 01-launch-template.config.template
api/.elasticbeanstalk/: config.yml
downtube/templates/: index.html  result.html
frontend/downtube/: index.html  package-lock.json  package.json  vite.config.ts
frontend/downtube/src/: App.tsx
frontend/downtube/src/components/: DownloadForm.tsx  ResultPage.tsx
